--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
                 <td colspan="2" class="break">LUNCH BREAK</td>
                 <td>Revision</td>
             </tr>
+            <tr>
+                <th>saturday</th>
+                <td>Revision</td>
+                <td>Lab practice</td>
+                <td>Project work</td>
+                <td colspan="2" class="break">LUNCH BREAK</td>
+            </tr>
+            <tr>
+                <th>sunday</th>
+                <td colspan="2" class="break">HOLIDAY</td>
+            </tr>
 
             <tr class="footer-row">
                 <td colspan="7">All students must attend classes regularly</td>
