--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -25,31 +25,31 @@
             <th>MARKS</th>
         </tr>
         <tr>
-            <td>sonu</td>
+            <td>SONU</td>
             <td>17</td>
             <td>101</td>
-            <td>math</td>
+            <td>Math</td>
             <td>87</td>
         </tr>
         <tr>
-            <td>tom</td>
+            <td>TOM</td>
             <td>20</td>
             <td>102</td>
             <td>DBMS</td>
             <td>78</td>
         </tr>
         <tr>
-            <td>tony</td>
+            <td>TONY</td>
             <td>19</td>
             <td>103</td>
-            <td>python</td>
+            <td>PYTHON</td>
             <td>77</td>
         </tr>
         <tr>
-            <td>sam</td>
+            <td>SAM</td>
             <td>21</td>
             <td>104</td>
-            <td>english</td>
+            <td>ENGLISH</td>
             <td>98</td>
         </tr>
     </table>
