--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <table border="3" cellpadding="10" cellspaceing="1">
+    <table border="3" cellpadding="10" cellspacing="1">
         <caption>STUDENT RECORD</caption>
         <tr>
             <th>NAME</th>
