--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <div class="table-container">
     <table>
-        <caption>College Time Table</caption>
+        <caption>COLLEGE TIME TABLE</caption>
 
         <thead>
             <tr>
-                <th>Day</th>
+                <th>DAY</th>
                 <th>9:00 - 9:50</th>
                 <th>9:55 - 10:45</th>
                 <th>10:50 - 11:40</th>
@@ -24,7 +24,7 @@
 
         <tbody>
             <tr>
-                <th>Monday</th>
+                <th>MONDAY</th>
                 <td>Operating System</td>
                 <td>Math</td>
                 <td>Python</td>
@@ -33,7 +33,7 @@
             </tr>
 
             <tr>
-                <th>Tuesday</th>
+                <th>TUESDAY</th>
                 <td>Machine Learning</td>
                 <td>Math</td>
                 <td>Operating System</td>
@@ -42,7 +42,7 @@
             </tr>
 
             <tr>
-                <th>Wednesday</th>
+                <th>WEDNESDAY</th>
                 <td colspan="2" class="break">LAB</td>
                 <td>Operating System</td>
                 <td>Python</td>
@@ -51,7 +51,7 @@
             </tr>
 
             <tr>
-                <th>Thursday</th>
+                <th>THURSDAY</th>
                 <td>Machine Learning</td>
                 <td>Python</td>
                 <td>Math</td>
@@ -60,7 +60,7 @@
             </tr>
 
             <tr>
-                <th>Friday</th>
+                <th>FRIDAY</th>
                 <td>Operating System</td>
                 <td>Python</td>
                 <td>Machine Learning</td>
@@ -68,14 +68,14 @@
                 <td>Revision</td>
             </tr>
             <tr>
-                <th>saturday</th>
+                <th>SATURDAY</th>
                 <td>Revision</td>
                 <td>Lab practice</td>
                 <td>Project work</td>
                 <td colspan="2" class="break">LUNCH BREAK</td>
             </tr>
             <tr>
-                <th>sunday</th>
+                <th>SUNDAY</th>
                 <td colspan="2" class="break">HOLIDAY</td>
             </tr>
 
